--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Jose Antonio Rodríguez Fernández <joseantonio.rodriguezfernandez@telefonica.com>",
   "main": "./index",
   "scripts": {
-    "lint": "jscs index.js lib && eslint index.js lib",
+    "lint": "eslint index.js lib",
     "prepublish": "npm run lint"
   },
   "repository": {
@@ -28,14 +28,16 @@
     "Unica"
   ],
   "dependencies": {
-    "buffertools": "2.1.3",
-    "chai-json-schema": "1.2.0",
-    "libxmljs": "0.14.3",
-    "tartare-util": "0.6.0",
-    "underscore": "1.8.3"
+    "buffertools": "^2.1.4",
+    "chai3-json-schema": "^1.2.1",
+    "libxmljs": "^0.18.0",
+    "lodash": "^4.14.0",
+    "tartare-util": "^1.0.0"
   },
   "devDependencies": {
-    "eslint": "^1.4.3",
-    "jscs": "^2.1.1"
+    "chai": "^3.5.0",
+    "eslint": "^2.13.1",
+    "eslint-config-google": "^0.6.0",
+    "eslint-plugin-jsdoc": "^2.3.1"
   }
 }
