--- a/package.json
+++ b/package.json
@@ -29,15 +29,19 @@
   ],
   "dependencies": {
     "buffertools": "^2.1.4",
+    "codependency": "^0.1.4",
     "is-my-json-valid": "^2.13.1",
-    "libxmljs": "^0.18.0",
     "lodash": "^4.14.0",
     "tartare-util": "^1.0.0"
+  },
+  "lazyDependencies": {
+    "libxmljs": "^0.18.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
     "eslint": "^2.13.1",
     "eslint-config-google": "^0.6.0",
-    "eslint-plugin-jsdoc": "^2.3.1"
+    "eslint-plugin-jsdoc": "^2.3.1",
+    "libxmljs": "^0.18.0"
   }
 }
